environments/staging/4-example/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react
  namespace: default
  labels:
    app: react
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
        - name: react
          image: ghcr.io/tobiv412/kube8s/angular-app:0.1.0
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
                memory: "128Mi"
                cpu: "500m"
      imagePullSecrets:
        - name: dockerconfigjson
