environments/staging/4-example/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: api
  namespace: default
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - app.devopsbyexample.com
    # - port:
    #     number: 443
    #     name: https
    #     protocol: HTTPS
    #   hosts:
    #     - app.devopsbyexample.com
      # tls:
      #   credentialName: api-devopsbyexample-com-crt
      #   mode: SIMPLE
